# replit-object-storage-python

./: .gitignore  .replit  Makefile  README.md  development.md  pyproject.toml  replit.nix  tox.ini
.github/: CODEOWNERS
.github/workflows/: python-publish.yml
.semaphore/: semaphore.yml
docs/: sidebar.json
docs/replit/: __init__.md
docs/replit/object_storage/: __init__.md  _config.md  client.md  errors.md  object.md
src/replit/: __init__.py
src/replit/object_storage/: __init__.py  _config.py  client.py  config.py  errors.py  object.py
src/replit/storage/: __init__.py  client.py  errors.py  object.py
tests/integration/replit/object_storage/: test_client.py
tests/integration/replit/storage/: test_client.py
tests/replit/storage/: mocks.py  test_client.py
tests/unit/replit/object_storage/: test_client.py
tests/unit/replit/storage/: test_client.py
