[tool.poetry]
name = "replit.storage"
version = "0.0.1.a3"
description = "A library for interacting with Object Storage on Replit"
authors = ["Repl.it <contact@repl.it>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/replit/replit-storage-python"
homepage = "https://github.com/replit/replit-storage-python"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]
packages = [
  { include = "replit", from = "src" },
  { include = "tests" }
]
exclude = ["tests"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
google-cloud-storage = "^2.14.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
pytest = "^8.0.0"
twine = "*"
pytest-cov = "^4.1.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
indent-width = 4
line-length = 88
select = ['E', 'W', 'F', 'I', 'B', 'D', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"